# dhall-haskell

./: stack.yaml
dhall-graphql/: dhall-graphql.cabal
dhall-graphql/dhall-to-graphql/: Main.hs
dhall-graphql/examples/: github.graphql
dhall-graphql/src/Dhall/: GraphQL.hs
